Diseño de Navbar acabada

--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -35,7 +35,7 @@ a{
                     </div>
     
                     <div class="col-2">
-                        <a href="" style="margin-right: 15px;">
+                        <a href="" style="margin-right: 15px;" data-bs-target="#search" data-bs-toggle="modal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                               </svg>
@@ -76,7 +76,7 @@ a{
     
     
                 <div class="col-4 text-end">
-                  <a href="" style="margin-right: 16px;">
+                  <a href="" style="margin-right: 16px;" data-bs-target="#search" data-bs-toggle="modal">
                     <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="white" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                       </svg>
@@ -96,3 +96,307 @@ a{
                 </div>
             </nav>
         </div>
+
+        
+
+
+
+
+
+
+
+        
+<!-- Modal categorias menu -->
+<div class="modal fade" id="opciones" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      
+      <div class="row">
+        <div class="col-12 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
+          <svg style="margin-right: 15px;" xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </div>
+      </div>
+     
+    
+      
+    <div>
+        <ul style="text-decoration: none; list-style: none; font-size: 30px; font-weight: 500;">
+          <div class="row">
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Store </li>
+            </div>
+            <div class="col-1 text-end" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;" xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Mac</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+            
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>iPad</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>iPhone</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Watch</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Vision</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>AirPods</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>TV & Home</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Entretenimiento</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Accesorios</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <li>Soporte</li>
+            </div>
+            <div class="col-1 text-end" data-bs-target="#subopciones" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+            <br>
+
+            <hr style="width:90%; margin-top:20px">
+            <li style="font-size:15px"><a href="">Iniciar Sesion</a></li>
+
+
+          </div>
+        </ul>
+    </div>
+    
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- Modal categorias submenu -->
+<div class="modal fade" id="subopciones" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      
+      <div class="row">
+        <div class="col-6" style="padding-top: 10px;" data-bs-target="#opciones" data-bs-toggle="modal">
+          <svg style="margin-left: 30px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+          </svg>
+        </div>
+
+        <div class="col-6 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
+          <svg style="margin-right: 15px;" xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </div>
+      </div>
+ 
+      <br>
+      
+    <div>
+        <ul style="text-decoration: none; list-style: none; font-size: 30px; font-weight: 500;">
+          <div class="row">
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 1 </li>
+            </div>
+            <div class="col-1 text-end" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;" xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 2</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+            
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 3</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 4</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 5</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+            <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <li>Subcategoria 6</li>
+            </div>
+            <div class="col-1 text-end option" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
+              <svg style="opacity:0.4; margin-left: 0px;"  xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="#000" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+              </svg>
+            </div>
+
+           
+
+
+
+          </div>
+        </ul>
+    </div>
+    
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Modal categorias menu -->
+<div class="modal fade" id="search" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-side">
+    <div class="modal-content">
+      
+    <div class="row">
+      <div class="col-12 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
+          <svg style="margin-right: 15px;" xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="#333336" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </div>
+
+        <br>
+    </div>
+
+    <div class="row">
+    <div class="col-1 text-end" style="margin-left:20px">
+        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="#333336" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+      </div>
+      
+      <div class="col-9">
+        <input type="text" style="border:none; width:100%; font-size:27px; border:none; outline:none; margin-top:-7px; font-weight: bold;" placeholder="Buscar">
+      </div>
+    </div>
+      
+
+    <br>
+   
+
+  <div class="contenido_de_buscar" style="margin-left:10px; margin-right:10px;">
+
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+
+<h2>sssssss</h2>
+
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+<h2>sssssss</h2>
+  </div>
+
+    </div>
+  </div>
+</div>
+
+
