--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -111,9 +111,11 @@ a{
       
       <div class="row">
         <div class="col-12 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
-          <svg style="margin-right: 15px;" xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1 0-.708z"/>
+          <svg style="margin-right: 15px;"  xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
           </svg>
+
+       
         </div>
       </div>
      
@@ -237,30 +239,32 @@ a{
 
 
 
-<!-- Modal categorias submenu -->
+
+<!-- Modal categorias menu -->
 <div class="modal fade" id="subopciones" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-fullscreen">
+  <div class="modal-dialog modal-fullscreen-lg"> <!-- Utiliza modal-fullscreen-lg para pantalla completa en LG -->
     <div class="modal-content">
       
       <div class="row">
-        <div class="col-6" style="padding-top: 10px;" data-bs-target="#opciones" data-bs-toggle="modal">
-          <svg style="margin-left: 30px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+        <div class="col-2"  style="padding-top: 10px;" data-bs-target="#opciones" data-bs-toggle="modal">
+          <svg style="margin-left: 25px;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
           </svg>
         </div>
 
-        <div class="col-6 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
-          <svg style="margin-right: 15px;" xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+        <div class="col-10 text-end" style="padding-top: 10px;" data-bs-dismiss="modal">
+          <svg style="margin-right: 15px;"  xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
           </svg>
         </div>
+
+
       </div>
- 
-      <br>
-      
-    <div>
+     
+      <div>
         <ul style="text-decoration: none; list-style: none; font-size: 30px; font-weight: 500;">
           <div class="row">
+      
             <div class="col-10" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
               <li>Subcategoria 1 </li>
             </div>
@@ -315,17 +319,16 @@ a{
               </svg>
             </div>
 
-           
-
-
-
           </div>
         </ul>
-    </div>
+      </div>
     
     </div>
   </div>
 </div>
+
+
+
 
 
 
