--- a/bootstrap/css/estilos.css
+++ b/bootstrap/css/estilos.css
@@ -8,7 +8,7 @@
 
  /*Imagen portada index*/
  #banner #outer {
-    background: url(https://images4.alphacoders.com/132/1329595.jpeg) top center no-repeat;
+    background: url(https://th.bing.com/th/id/R.41f98b17e69919645f42492c6442bb5a?rik=jR2qYlcW2rX6ew&riu=http%3a%2f%2fmedia.boingboing.net%2fwp-content%2fuploads%2f2016%2f08%2ftumblr_oce13w6jZ01qhccbco1_1280.gif&ehk=QsB1IjjP8xlj%2fPT4Sw%2bwVSiLlUhdsoxK8HOojK98GiA%3d&risl=&pid=ImgRaw&r=0) top center no-repeat;
     background-size: cover;
 }
 #banner #outer #hero {
@@ -17,7 +17,7 @@
 #banner #outer #hero {
     width: 100%;
     background: rgba(59, 105, 2, 0.3);
-    height: 500px;
+    height: 700px;
     display: table;
 }
 #banner #outer #hero h2 {
@@ -34,3 +34,113 @@
     text-align: center;
 }
  /*Imagen portada index*/
+
+
+
+  /*cards*/
+
+  @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+  @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+  .cards {
+      justify-content: center;
+      -webkit-justify-content: center;
+  }
+  
+
+  .card--1 .card__img, .card--1 .card__img--hover {
+      background-image: url('https://images.pexels.com/photos/307008/pexels-photo-307008.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+  }
+  
+  .card__like {
+      width: 18px;
+  }
+  
+  .card__clock {
+      width: 15px;
+    vertical-align: middle;
+      fill: #AD7D52;
+  }
+  .card__time {
+      font-size: 12px;
+      color: #AD7D52;
+      vertical-align: middle;
+      margin-left: 5px;
+  }
+  
+  .card__clock-info {
+      float: right;
+  }
+  
+  .card__img {
+    visibility: hidden;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 235px;
+    border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+    
+  }
+  
+  .card__info-hover {
+      position: absolute;
+      padding: 16px;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+  }
+  
+  .card__img--hover {
+    transition: 0.2s all ease-out;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+    position: absolute;
+      height: 235px;
+    border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  top: 0;
+    
+  }
+  .card {
+    margin-right: 25px;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    background-color: #fff;
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+  }
+  .card:hover {
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+      transform: scale(1.10, 1.10);
+  }
+  
+  .card__info {
+  z-index: 2;
+    background-color: #fff;
+    border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+     padding: 16px 24px 24px 24px;
+  }
+  
+  .card__category {
+      font-family: 'Raleway', sans-serif;
+      text-transform: uppercase;
+      font-size: 13px;
+      letter-spacing: 2px;
+      font-weight: 500;
+    color: #868686;
+  }
+  
+  .card__title {
+      margin-top: 5px;
+      margin-bottom: 10px;
+    font-size: 25px;
+  }
+  
+  
+   /*cards*/
+
