--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -49,7 +49,9 @@ a{
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                               </svg>
                         </a>
-                        <a href="" style="margin-right: 15px;">
+
+                        <!--login -->
+                        <a href="http://localhost/geekhaven/src/views/user/login.php" style="margin-right: 15px;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" class="bi bi-person" viewBox="0 0 16 16">
                                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
                               </svg>
@@ -233,7 +235,7 @@ a{
             <br>
 
             <hr style="width:90%; margin-top:20px">
-            <li style="font-size:15px"><a href="">Iniciar Sesion</a></li>
+            <li style="font-size:15px"><a href="http://localhost/geekhaven/src/views/user/login.php">Iniciar Sesion</a></li>
 
 
           </div>
