--- a/bootstrap/css/estilos.css
+++ b/bootstrap/css/estilos.css
@@ -396,3 +396,45 @@
     }
 
     
+
+    /*input apple*/
+    
+.search-container {
+
+  align-items: center;
+  background-color: #ecececc1;
+  border-radius: 40px;
+  padding: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
+#search-input {
+  border: none;
+  background: transparent;
+  outline: none;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+}
+
+#search-button {
+  background-color: #0071f0;
+  border: none;
+  border-top-right-radius: 40px;
+  border-bottom-right-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  cursor: pointer;
+}
+
+#search-button i {
+  color: white;
+  font-size: 20px;
+}
+
+#search-input::placeholder {
+  color: #888;
+}
