--- a/bootstrap/css/estilos.css
+++ b/bootstrap/css/estilos.css
@@ -482,8 +482,8 @@ background: #17A2B8;
   width: 100%;
   margin: 50px auto;
   padding:40px;
-  padding-left: 90px;
-  padding-right:90px;
+  padding-left: 30px;
+  padding-right:30px;
 }
 #drop-area.highlight {
   border-color: purple;
@@ -496,7 +496,7 @@ background: #17A2B8;
   margin-top: 10px;
 }
 #gallery img {
-  width: 400px;
+  width: 90%;
   margin-bottom: 10px;
   margin-right: 10px;
   vertical-align: middle;
